--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.WorkoutActivity"></activity>
         <activity android:name=".Activities.ProgramWorkoutActivity" />
         <activity android:name=".Activities.ProgramDetailsActivity" />
-        <activity android:name=".Activities.ProgramViewActivity" />
+        <activity
+            android:name=".Activities.ProgramViewActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Activities.SignUpActivity" />
         <activity android:name=".Activities.LoginActivity" />
         <activity android:name=".Activities.MainActivity">
