--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MeasurementTrackerActivity"></activity>
+        <activity android:name=".Activities.PhotoTrackerActivity"></activity>
+        <activity android:name=".Activities.MeasurementTrackerActivity" />
         <activity android:name=".Activities.WeightHistoryActivity" />
         <activity android:name=".Activities.WeightTrackerActivity" />
         <activity android:name=".Activities.ProgramWorkoutActivity" />
