Added firebase push notifications, added showing internal storage img in recyclerview

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,12 @@ android {
 }
 
 dependencies {
+    apply plugin: 'com.google.gms.google-services'
+    // Add the Firebase SDK for Google Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
+
+    // Add the SDK for Firebase Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:20.2.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
